12.dec (ws)
      - fix printing of custom page sizes
      - updated russian translation from Alexandre Prokoudine
11.dec (ws)
      - fix visible attribute of bar line
10.dec (ws)
      - fix crash when deleting staff; implement proper beam and tuplet handling
      - fix page size list in page settings
      (tb)
      - adding Turkish translation made by halil kirazlı
9.dec (ws)
      - do not move position when entering interval (alt+num)
      - fix: could not select articulation symbols attached to rests (fermata),
        bounding box calculation of rests included articulations
8.dec (tb)
      - adjustments to dutch locale
6.dec (ws)
      - retain spelling of source note after creating a tuplet
      - changed gate times for midi rendering (David Bolton)
      - update note duration toolbar after creating a tuplet
      (la)
      - add lyrics extension ("extend") musicXML export
5.dec (ws)
      - make "add tie" undoable
      - fix sorting staves
      - also move beams when sorting staves (as beams are now editable and therefore
        persistent)
4.dec (ws)
      - pick right sharp and flat symbols when reading instrument templates
      - fix deleting notes in tuplet
      - fix tremolo through stem
      - fix midi import; sometimes an extra empty staff was created
      - fix crash in drum staff note entry mode
3.dec (ws)
      - new functions: move palettes up/down; insert new palette
      - new palette properties dialog
      - disable script interface for mac os x build
      - use sys/time.h for mac os x
      - removed "#include <QtGui/QX11Info>" from all.h
      - replaced values.h with limits.h in all.h
2.dec (ws)
      - implement print page range (print from-to)
      - palette elements are now movable via drag/drop; palettes ares saved/restored
        in special xml file at ~/.local/share/data/MusE/MuseScore/mscore-palette.xml (linux)
      - fix update of dot button in note entry toolbar
      (db)