@@ -1,3 +1,5 @@
+15.dec (tb)
+      - updated dutch translation from Jaap Plaisier 
 12.dec (ws)
       - fix printing of custom page sizes
       - updated russian translation from Alexandre Prokoudine
